--- a/src/index.html
+++ b/src/index.html
@@ -596,6 +596,7 @@
     <li>John E Brandt, head dude, jebswebs</li>
     <li>Heather Gray, Website Developer</li>
     <li>Stein Erik Skotkjerra, Accessibility consultant, CEO, Inklusio</li>
+    <li>Julie Romanowski, Senior Digital Accessibility Specialist, State Farm</li>
   </ol>
   <p><a href="https://github.com/karlgroves/overlayfactsheet/">Add your name to this list on GitHub</a></p>
 </div>
